# Inteli-College-2024-2B-T10-SI08-G01

./: .gitignore  README.md
.github/PULL_REQUEST_TEMPLATE/: PULL_REQUEST_TEMPLATE.md
document/: README.md
document/docs/: analise-de-negocios.md  analise-de-ux.md  analise-etica.md  cubo-de-dados.md  data-product-canvas.md  docker.md  documentacao-data-app.md  documentacao-oficial.docx  documentacao-oficial.md  estrutura-de-ingestao-de-dados.md
src/: Dockerfile  Dockerfile.frontend  README.md  docker-compose.yml  pyproject.toml
src/aead/: Untitled.ipynb
src/dados/: AED-Consumo 2019-2024.ipynb  AED-TABELA_BIG_DATA_FT_OCORRENCIAS.ipynb  big_data_falhas.ipynb
src/dataApp/: api.py  streamlit.py
src/s3_to_clickhouse_etl/: .gitignore  app.py
src/s3_to_clickhouse_etl/config/: clickhouse_client.py  connections.py  observability.py  settings.py
src/s3_to_clickhouse_etl/etlbronze/: ingest.py
src/s3_to_clickhouse_etl/views/: falhas_por_causa.py  falhas_por_descricao.py  falhas_por_dia.py  falhas_por_horario.py  falhas_por_id_equipamento.py  falhas_por_localidade.py  falhas_por_situacao.py  falhas_por_trecho_etl.py  ocorrencias_por_descricao.py  ocorrencias_por_dia.py  ocorrencias_por_horario.py  ocorrencias_por_manchete.py  ocorrencias_por_trecho.py
src/tests/: README (1).md  doc.md  test_falha_trecho.py  test_falhas_por_causa.py  test_falhas_por_id_equipamento.py  test_ocorrencia_por_manchete.py
